# heimdall

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  example.toml  run_assessment.py
examples/vulnerable_app/: README.md  config.py  main.py
heimdall/: __init__.py  cli.py  config.py  runner.py
heimdall/bootstrap/: __init__.py  minting.py  principals.py  provision.py  server.py  testdb.py
heimdall/core/: __init__.py  chains.py  context.py  findings.py  guardrail.py  http.py  model.py  reqbuild.py  sarif.py  taxonomy.py  term.py
heimdall/core/templates/: report.html.j2
heimdall/discovery/: __init__.py  auth.py  build.py  jwks.py  openapi.py  source.py
heimdall/modules/: __init__.py  a01_access_control.py  a02_crypto_jwt.py  a03_injection.py  a05_misconfig.py  a06_components.py  a07_auth.py  a10_ssrf.py  base.py  business_logic.py  command_injection.py  csrf.py  data_exposure.py  file_upload.py  graphql.py  host_header.py  improper_inventory.py  mass_assignment.py  oidc.py  open_redirect.py  race_conditions.py  resource_consumption.py  sast.py  session_lifecycle.py  sqli_blind.py  websocket.py  workflow.py  xxe.py
tests/: conftest.py  test_discovery.py  test_jwt.py  test_modules.py  test_report.py  test_reqbuild.py
